[build-system]
requires = [
    "landtransportsg",
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "landtransportsg"
dynamic = [
    "dependencies",
    "version",
]
authors = [{name = "Yuhui", email = "yuhuibc@gmail.com"}]
maintainers = [{name = "Yuhui", email = "yuhuibc@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
description = "Python package for interacting with APIs available at LTA DataMall"
keywords = [
    "lta",
    "land transport authority",
    "datamall",
    "python",
    "singapore",
    "wrapper",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
readme = "README.rst"
requires-python = ">= 3.13"

[project.urls]
homepage = "https://github.com/yuhui/landtransportsg"
documentation = "https://landtransportsg.readthedocs.io/en/latest/"
repository = "https://github.com/yuhui/landtransportsg.git"
issues = "https://github.com/yuhui/landtransportsg/issues"
changelog = "https://github.com/yuhui/landtransportsg/blob/master/CHANGELOG.rst"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "landtransportsg.__version__"}

[tool.setuptools.package-data]
landtransportsg = ["py.typed"]
